# exercism

./: .dprint.jsonc  .lefthook.yml  Cargo.toml  Makefile  README.md  justfile
rust/: Cargo.toml  justfile
rust/.archive/low-power-embedded-game/: README.md
rust/.archive/lucians-luscious-lasagna/: README.md
rust/.archive/magazine-cutout/: README.md
rust/.archive/resistor-color/: Cargo.toml  README.md
rust/.archive/rpn-calculator/: README.md
rust/14-leap/src/: lib.rs
rust/4-clock/src/: lib.rs
rust/5-anagram/src/: lib.rs
rust/7-sublist/src/: lib.rs
rust/acronym/: Cargo.toml  README.md
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/all-your-base/: Cargo.toml  README.md
rust/all-your-base/.exercism/: metadata.json
rust/all-your-base/src/: lib.rs
rust/allergies/: Cargo.toml  README.md
rust/allergies/.exercism/: metadata.json
rust/allergies/src/: lib.rs
rust/alphametics/: Cargo.toml  README.md
rust/alphametics/src/: lib.rs
rust/anagram/: Cargo.toml
rust/armstrong-numbers/: Cargo.toml
rust/armstrong-numbers/src/: lib.rs
rust/assembly-line/src/: lib.rs
rust/beer-song/: Cargo.toml
rust/beer-song/src/: lib.rs
rust/binary-search/: Cargo.toml  HINTS.md  README.md
rust/binary-search/.exercism/: metadata.json
rust/binary-search/src/: lib.rs
rust/bob/: Cargo.toml  README.md
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/bob/tests/: bob.rs
rust/bowling/: Cargo.toml
rust/bowling/.exercism/: metadata.json
rust/bowling/src/: lib.rs
rust/clock/: Cargo.toml  README.md
rust/clock/src/: lib.rs
rust/collatz-conjecture/: Cargo.toml
rust/collatz-conjecture/.exercism/: metadata.json
rust/collatz-conjecture/src/: lib.rs
rust/difference-of-squares/: Cargo.toml  README.md
rust/diffie-hellman/.exercism/: metadata.json
rust/diffie-hellman/src/: lib.rs
rust/eliuds-eggs/: Cargo.toml  README.md
rust/eliuds-eggs/.exercism/: metadata.json
rust/etl/: Cargo.toml  README.md
rust/etl/.exercism/: metadata.json
rust/etl/src/: lib.rs
rust/gigasecond/: Cargo.toml  README.md
rust/gigasecond/src/: lib.rs
rust/grains/: Cargo.toml
rust/health-statistics/src/: lib.rs
rust/hello-world/: Cargo.toml
rust/high-scores/: Cargo.toml
rust/high-scores/src/: lib.rs
rust/kindergarten-garden/: README.md
rust/kindergarten-garden/.exercism/: metadata.json
rust/kindergarten-garden/src/: lib.rs
rust/leap/: Cargo.toml  README.md
rust/leap/.exercism/: metadata.json
rust/luhn/: Cargo.toml
rust/luhn/.exercism/: metadata.json
rust/luhn/src/: lib.rs
rust/matching-brackets/: Cargo.toml
rust/matching-brackets/.exercism/: metadata.json
rust/matching-brackets/src/: lib.rs
rust/minesweeper/: Cargo.toml  README.md
rust/minesweeper/.exercism/: metadata.json
rust/minesweeper/src/: lib.rs
rust/nth-prime/: Cargo.toml
rust/nth-prime/.exercism/: metadata.json
rust/nth-prime/src/: lib.rs
rust/nth-prime/tests/: nth-prime.rs
rust/paasio/: Cargo.toml  README.md
rust/paasio/.exercism/: metadata.json
rust/paasio/src/: lib.rs
rust/paasio/tests/: paasio.rs
rust/prime-factors/: Cargo.toml
rust/prime-factors/.exercism/: metadata.json
rust/proverb/: Cargo.toml  README.md
rust/raindrops/: Cargo.toml  README.md
rust/reverse-string/: Cargo.toml
rust/robot-simulator/: Cargo.toml  README.md
rust/run-length-encoding/: Cargo.toml  README.md
rust/series/: README.md
rust/space-age/: Cargo.toml  README.md
rust/sublist/: Cargo.toml
rust/sum-of-multiples/: Cargo.toml  README.md
(+86 files in other folders)
