[workspace]
members = [
  "rust/.archive/assembly-line",
  "rust/.archive/health-statistics",
  "rust/.archive/low-power-embedded-game",
  "rust/.archive/lucians-luscious-lasagna",
  "rust/.archive/magazine-cutout",
  "rust/.archive/resistor-color",
  "rust/.archive/role-playing-game",
  "rust/.archive/rpn-calculator",
  "rust/.archive/semi-structured-logs",
  "rust/.archive/short-fibonacci",
  "rust/anagram",
  "rust/armstrong-numbers",
  "rust/beer-song",
  "rust/clock",
  "rust/difference-of-squares",
  "rust/gigasecond",
  "rust/grains",
  "rust/hello-world",
  "rust/high-scores",
  "rust/kindergarten-garden",
  "rust/leap",
  "rust/matching-brackets",
  "rust/prime-factors",
  "rust/nth-prime",
  "rust/raindrops",
  "rust/reverse-string",
  "rust/sublist",
]

resolver = "2"
