[workspace]
members = [
  'rust/.archive/assembly-line',
  'rust/.archive/health-statistics',
  'rust/.archive/low-power-embedded-game',
  'rust/.archive/lucians-luscious-lasagna',
  'rust/.archive/magazine-cutout',
  'rust/.archive/resistor-color',
  'rust/.archive/role-playing-game',
  'rust/.archive/rpn-calculator',
  'rust/.archive/semi-structured-logs',
  'rust/.archive/short-fibonacci',
  'rust/acronym',
  'rust/all-your-base',
  'rust/allergies',
  'rust/alphametics',
  'rust/anagram',
  'rust/armstrong-numbers',
  'rust/beer-song',
  'rust/binary-search',
  'rust/bob',
  'rust/clock',
  'rust/collatz-conjecture',
  'rust/difference-of-squares',
  'rust/eliuds-eggs',
  'rust/etl',
  'rust/gigasecond',
  'rust/grains',
  'rust/hello-world',
  'rust/high-scores',
  'rust/kindergarten-garden',
  'rust/leap',
  'rust/luhn',
  'rust/matching-brackets',
  'rust/minesweeper',
  'rust/nth-prime',
  'rust/paasio',
  'rust/prime-factors',
  'rust/proverb',
  'rust/raindrops',
  'rust/reverse-string',
  'rust/robot-simulator',
  'rust/run-length-encoding',
  'rust/series',
  'rust/space-age',
  'rust/sublist',
  'rust/sum-of-multiples',
]
resolver = '2'
