[workspace]
members = [
  "anagram",
  "armstrong-numbers",
  "assembly-line",
  "beer-song",
  "clock",
  "difference-of-squares",
  "gigasecond",
  "grains",
  "health-statistics",
  "hello-world",
  "high-scores",
  "low-power-embedded-game",
  "lucians-luscious-lasagna",
  "magazine-cutout",
  "resistor-color",
  "reverse-string",
  "role-playing-game",
  "rpn-calculator",
  "semi-structured-logs",
  "short-fibonacci",
  "sublist",
]

resolver = "2"
